# dbt-weather-analytics

./: .env.example  .gitignore  AGENT.md  README.md  dbt Weather Analytics.html  dbt_Weather_Analytics.html  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
.github/workflows/: motherduck-smoke-test.yml  open-meteo-raw-load.yml
.streamlit/: config.toml
analyses/: sanbox.sql
dashboard/: app.py
dashboard/pages/: city_detail.py  comparison.py  forecast.py  map_view.py  overview.py  recommendations.py
dashboard/utils/: db.py  theme.py
data/: raw_air_quality_hourly.parquet  raw_forecast_daily.parquet  raw_locations.parquet  raw_weather_daily.parquet
data/raw/: raw_air_quality_hourly.csv  raw_forecast_daily.csv  raw_locations.csv  raw_weather_daily.csv
models/: source.yml
models/marts/: _marts.yml  dim_location.sql  fct_city_weather_day.sql  fct_forecast_accuracy.sql  mart_forecast_upcoming.sql  mart_latest_conditions.sql
models/staging/: _sources.yml  _staging.yml  stg_air_quality_hourly.sql  stg_forecast_daily.sql  stg_locations.sql  stg_raw_air_quality_hourly.sql  stg_raw_forecast_daily.sql  stg_raw_locations.sql  stg_raw_weather_daily.sql  stg_weather_daily.sql
scripts/: bootstrap_motherduck.py  create_db.py  extract_open_meteo.py  load_raw_to_motherduck.py
sql/: init_motherduck.sql
tests/: assert_city_weather_temp_in_range.sql  assert_forecast_horizon_non_negative.sql
