[project]
name = "dbt-weather"
version = "0.1.0"
description = "Weather Analytics with dbt"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dbt-core==1.8.0",
    "dbt-duckdb>=1.8.0",
    "polars>=0.20.0",
    "duckdb==1.5.3",
    "pandas",
    "ipykernel",
    "numpy",
    "pyarrow",
    "sqlfluff",
    "sqlfluff-templater-dbt",
]

[tool.uv]
package = false
